--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/coworking
 JWT_SECRET=tu_secreto
+EMAIL_USER=carlosmartin.dev@gmail.com
+EMAIL_PASS=isfvygbmfympiwxy
